manifests/nginx_hello-world/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: default
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 80
