manifests/nginx_hello-world/hello-ingress-com-certificado.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt-staging" # Utilizar para fazer testes
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Utilizar para produção
spec:
  tls:
    - hosts:
        - <MEU_SITE>.com # Substitua por seu domínio
        - www.<MEU_SITE>.com # Substitua por seu domínio
      secretName: <MEU_SITE>-tls-secret # Mesmo nome definido no certificado
  rules:
    - host: <MEU_SITE>.com # Substitua por seu domínio
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
    - host: www.<MEU_SITE>.com # Substitua por seu domínio
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
